2006-03-06  Christian Thalinger <twisti@complang.tuwien.ac.at>

	* configure.ac: Check for FREETYPE2.  This is a reverted patch and
	is required on Darwin.
	* native/jni/gtk-peer/Makefile.am (AM_LDFLAGS): Added FREETYPE2.
	(AM_CFLAGS): Likewise.

2006-03-06  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/tree/FixedHeightLayoutCache.java: Reformatted and fixed
	API doc tag warnings,
	* javax/swing/tree/VariableHeightLayoutCache.java: Likewise.
	
2006-03-06  Dalibor Topic  <robilad@kaffe.org>

	* gnu/java/net/protocol/file/Connection.java (unquote):
	Update position in buffer after decoding a unicode character
	outside of the basic plane.

2006-03-06  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/plaf/basic/BasicTextUI.java:
	(damageRange): Rewritten if-expressions to correctly identify the
	break condition.

2006-03-06  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/DefaultCaret.java:
	(mouseDragged): Do selection when shift is pressed.
	(mouseClicked): Implemented.

2006-03-06  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/external/classpath/java/net/URI.java (quote):
	Pass Unicode characters outside the basic plane through.

2006-03-06  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/PlainDocument.java:
	(insertUpdate): Extended if-expression, added
	code to generate another Element when newly inserted characters
	and old ones will be on the same line.

2006-03-05  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/GapContent.java:
	(insertString): Throw exception when argument is below
	zero.

2006-03-05  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/metal/MetalComboBoxButton.java
	(MetalComboBoxButton(JComboBox, Icon, boolean, CellRendererPane, 
	JList)): Fixed API doc tag,
	* javax/swing/plaf/metal/MetalInternalFrameTitlePane
	(createLayout): Fixed API doc warning.

2006-03-05  David Gilbert  <david.gilbert@object-refinery.com>
