@@ -1,3 +1,10 @@
+2006-03-06  Robert Schuster  <robertschuster@fsfe.org>
+
+	* javax/swing/text/PlainDocument.java: Fix copyright header,
+	added author tags.
+	(insertUpdate): Do not copy the whole document any more, added some
+	more variables to prevent needless method calls.
+
 2006-03-06  Christian Thalinger <twisti@complang.tuwien.ac.at>
 
 	* configure.ac: Check for FREETYPE2.  This is a reverted patch and
